<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">Account</string>
    <string name="account_does_not_exist">Account does not exist</string>
    <string name="accounts">Accounts</string>
    <string name="activity">Activity</string>
    <string name="activity_graph">Activity graph</string>
    <string name="add_a_background_to_the_retweet_badge">Add a background to the retweet badge</string>
    <string name="add_account">Add account</string>
    <string name="add_client">Add client</string>
    <string name="add_domain">Add domain</string>
    <string name="add_keyword">Add keyword</string>
    <string name="add_page">Add page</string>
    <string name="add_theme">Add Theme</string>
    <string name="add_to_drafts">Add to drafts</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="add_to_list">Add to list</string>
    <string name="add_to_read_later">Save to read later</string>
    <string name="added_to_list">Added to list</string>
    <string name="added_to_saved_searches">Added to saved searches</string>
    <string name="advanced">Advanced</string>
    <string name="all">All</string>
    <string name="all_caught_up">All caught up!</string>
    <string name="all_colors">All colors</string>
    <string name="all_text_same_size">All text same size</string>
    <string name="allow_panning_in_hover_preview">Allow panning in hover preview</string>
    <string name="allow_zooming_in_hover_preview">Allow zooming in hover preview</string>
    <string name="already_added_tap_to_remove">Already added, tap to remove</string>
    <string name="always_show_2_panels">Always show 2 panels</string>
    <string name="always_show_tweet_actions">Always show tweet actions</string>
    <string name="amount_followers" formatted="false">%amount% Followers</string>
    <string name="amount_following" formatted="false">%amount% Following</string>
    <string name="amount_likes" formatted="false">%amount% likes</string>
    <string name="amount_new_favourite_tweets" formatted="false">%amount% new favorite tweets</string>
    <string name="app_icon">App icon</string>
    <string name="automatically_insert_hashtags">"Automatically insert the hashtags from the tweet you're replying to"</string>
    <string name="by_default_smaller_screens">By default, smaller screens will only show a single panel</string>
    <string name="choose_what_disappears_when_scrolling">Choose what disappears or stays put when scrolling</string>
    <string name="circular_profile_image">Circular profile page avatar</string>
    <string name="clear_notifications_on_open">Clear notifications on open</string>
    <string name="close_image_transition">Close image transition</string>
    <string name="close_swipe_directon">Close swipe direction</string>
    <string name="compose_new_tweet">Compose new tweet</string>
    <string name="compose_notification">Compose notification</string>
    <string name="configure_how_locations">Configure how locations are added to your tweets</string>
    <string name="configure_how_windows">Configure how windows open and close inside Flamingo</string>
    <string name="confirm_retweets">Confirm retweets</string>
    <string name="connect_replies_in_your_timeline">Connect replies in your timeline</string>
    <string name="custom_counter_color">Custom counter color</string>
    <string name="custom_profile_color">Custom profile color</string>
    <string name="customise_the_layout_of_your_tabs_and_toolbars">Customise the layout of your tabs and toolbars</string>
    <string name="different_pages_for_accounts">Different pages for accounts</string>
    <string name="different_themes_for_accounts">Different themes for accounts</string>
    <string name="direct_messages">Direct messages</string>
    <string name="full_screen_media_previews">Full screen media previews</string>
    <string name="geotag_tweets_automatically">Geotag tweets automatically</string>
    <string name="geotagging">Geotagging</string>
    <string name="have_the_tabs">Make the tabs have a different background color to the toolbar, similar to how Facebook has a blue toolbar but white tabs</string>
    <string name="hide_toolbar_when_scrolling_up">Hide toolbar when scrolling up</string>
    <string name="hide_unread_counter">Hide unread counter</string>
    <string name="how_to_arrange_a_list_of_users">How to layout a list of users for pages of followers or search results</string>
    <string name="insert_hashtags_when_replying">Insert hashtags when replying</string>
    <string name="lists">Lists</string>
    <string name="lock_compose_button_when_scrolling">Lock compose button when scrolling</string>
    <string name="lock_tabs_when_scrolling">Lock tabs when scrolling</string>
    <string name="lock_toolbar_when_scrolling">Lock toolbar when scrolling</string>
    <string name="nav_bar_color">Nav bar color</string>
    <string name="navigation">Navigation</string>
    <string name="navigation_bar">Navigation bar</string>
    <string name="navigation_mode">Navigation mode</string>
    <string name="notifications">Notifications</string>
    <string name="only_used_when_toolbar_layout_is_set_to_search">Requires toolbar layout set to search</string>
    <string name="opening_transition">Opening transition</string>
    <string name="other">Other</string>
    <string name="profile">Profile</string>
    <string name="profile_color">Profile color</string>
    <string name="read_later">Read later</string>
    <string name="reply_order">Reply order</string>
    <string name="reverse_reply_direction">Reverse reply direction</string>
    <string name="reverse_toolbar_scrolling_direction">Reverse toolbar scrolling direction</string>
    <string name="scrolling">Scrolling</string>
    <string name="search">Search</string>
    <string name="search_bar_color">Search bar color</string>
    <string name="select_how_replies_are">Select how replies are ordered on the tweet details screen</string>
    <string name="selected_tweet_gap">Selected tweet gap</string>
    <string name="settings">Settings</string>
    <string name="show_a_constant_notification">Show a constant notification for quick access</string>
    <string name="show_a_gap">Show a gap above/below when viewing tweet actions</string>
    <string name="show_avatar_in_user_dropdown">Show avatar on user dropdown</string>
    <string name="show_badges">Show unread badges</string>
    <string name="show_compose_button">Show compose button</string>
    <string name="show_compose_on_profile">Show compose on profile</string>
    <string name="show_icons">Show icons</string>
    <string name="show_in_navigation_menu">Show in navigation menu</string>
    <string name="show_like_and_retweet_numbers">Show like &amp; retweet counts</string>
    <string name="show_padding_on_sides">Show padding on sides for single panel</string>
    <string name="show_summary_graph">Show summary graph on activity screen</string>
    <string name="show_text">Show text</string>
    <string name="show_undo_before_sending_tweet">Show undo before sending tweet</string>
    <string name="show_verified_toggle">Show verified toggle</string>
    <string name="show_when_retweeted">Show retweeted date instead of original tweet date</string>
    <string name="side_menu_background">Side menu background</string>
    <string name="status_bar">Status bar</string>
    <string name="status_bar_color">Status bar color</string>
    <string name="swap_tweets_and_popular_in_search">Swap tweets and popular in search</string>
    <string name="swipe_from_any_direction_for_images">Swipe any direction to close images</string>
    <string name="tab_background_color">Tab background color</string>
    <string name="tab_selected_color">Tab selected color</string>
    <string name="tab_unselected_color">Tab unselected color</string>
    <string name="tab_unselected_opacity">Tab unselected opacity</string>
    <string name="tap_unread_counter_to_jump_to_oldest_unread_tweet">Tap to jump to oldest unread tweet</string>
    <string name="theme_per_account">Theme per account</string>
    <string name="timeline">Timeline</string>
    <string name="toolbar_layout">Toolbar layout</string>
    <string name="transitions">Transitions</string>
    <string name="tweet_details">Tweet details</string>
    <string name="tweets">Tweets</string>
    <string name="unread_counter">Unread counter</string>
    <string name="unread_counter_color">Unread counter color</string>
    <string name="unread_counter_color_text">Unread counter color text</string>
    <string name="use_custom_tab_color">Use custom tab color</string>
    <string name="use_precise_location">Use precise location</string>
    <string name="use_profile_icons_as_tabs">Use profile icons as tabs</string>
    <string name="use_side_menu">Use side menu</string>
    <string name="use_system_dark_mode">Use system dark mode</string>
    <string name="user_avatars">User avatars</string>
    <string name="user_list_layout">User list layout</string>
    <string name="wait_until_user_has_confirmed_by_performing">Wait until user has confirmed before performing action</string>
    <string name="wide_color_gamut">Wide color gamut</string>
</resources>